更新博客(随笔一)
1. 修复语法错误。

--- a/source/_posts/随笔一.md
+++ b/source/_posts/随笔一.md
@@ -29,7 +29,7 @@ excerpt: 突然想矫情一下，抒发一下自己。
 
 可能这份工作起初我觉得是有意义的，它让我学习到了目前的制造业业务、代码开发的规范、很多不同种类的开发框架（无论是旧的老掉牙的还是新的，于我而言都是之前没接触过的）。
 
-但随着我第一任领导和第二任领导接二连三的离职，事情逐渐变得不对劲了。我并没有悟出来，随着直属领导的离职，我会在公司内部没有可以一个依靠的人。从此，代码、学习、提升自我在我工作时变得没有那么重要。
+但随着我第一任领导和第二任领导接二连三的离职，事情逐渐变得不对劲了。我并没有悟出来，随着直属领导的离职，我会在公司内部没有一个可以依靠的人。从此，代码、学习、提升自我在我工作时变得没有那么重要。
 
 于是，伴随着体制调整和新领导ASSIGN策略调整的，我随着公司内部的老油条们一起移除原先的部门，进入机动部队。第一次开会，有位老员工对领导布置的简单任务直言“不会”，我还在纳闷为什么要这么说，后来才明白这其实是一种策略。我一开始还有一些正经活可以做，到后面很多项目的ASSIGN逐渐收紧，来找我的都是一些DIRTY WORK了。又经历了上述人事的一番PUA，这份工作可谓是彻底失去了我心目中的意义。
 
