更新博客内容(一些规划)

--- a/source/_posts/一些规划.md
+++ b/source/_posts/一些规划.md
@@ -23,6 +23,8 @@ excerpt: 更新一些近期的规划。
 
     此处，分享一个很方便的Github项目：[ccf-ddl](https://github.com/ccfddl/ccf-deadlines)（也是从同学那边学习到的），可以看到会议的距离截止日期的倒数时间，可以对会议进行分类检索和收藏，点进去还有官网链接等相关信息，还有微信小程序，让你时刻不忘你还有论文没写。
 
+    再分享一个软著专利申请流程贴：[CSDN](https://blog.csdn.net/weixin_45940369/article/details/139352517)，这是保底了，感谢提供链接的大佬同学
+
 - 2025/03：着手完成大论文 + 送审
 
 ## 学习方面（二）
